last changes before prod

--- a/events.html
+++ b/events.html
@@ -62,49 +62,73 @@
   </header>
     <div class="all_cards">
         <div class="card">
-            <img  class="cardimg" src="favicon.png" alt="Image not supported">
+            <img  class="cardimg" src="event1.png" alt="Image not supported">
             <div class="content">
-                <p>INFORMATION GOES HERE</p>
+                <p>Registration is now open for the long-awaited National Schools Team (NST) competition. We will be conducting an intra-school tournament to select students to represent NPSI. Click on the button to learn more about the official tournament.<h1></h1></p>
             </div>
             <div class="extra">
                 <div>
-                    <a href="" class="link">Read More</a>
+                    <a href="https://singaporechess.org.sg/event/national-schools-team-2023/" class="link" target="_blank">Read More</a>
                 </div>
             </div>
         </div>
         <div class="card">
-            <img  class="cardimg" src="favicon.png" alt="Image not supported">
+            <img  class="cardimg" src="event3.png" alt="Image not supported">
             <div class="content">
-                <p>INFORMATION GOES HERE</p>
+              <p style="font-size: larger;">Calling all young chess enthusiasts! Join us in celebrating the 1st Year Anniversary of the Kids Chess Club with an exciting and competitive tournament!</p>
+              <p><br></p>
             </div>
             <div class="extra">
                 <div>
-                    <a href="" class="link">Read More</a>
+                    <a href="https://singaporechess.org.sg/event/29-july-2023-kids-chess-club-1st-year-anniversary-tournament/" class="link" target="_blank">Read More</a>
                 </div>
             </div>
         </div>
         <div class="card">
-            <img  class="cardimg" src="favicon.png" alt="Image not supported">
+            <img  class="cardimg" src="event2.png" alt="Image not supported">
             <div class="content">
-                <p>INFORMATION GOES HERE</p>
+                <p style="font-size: 1.156em;">The National Rapid and Blitz Chess Championships is now open for registration! This year’s events will be held on homeground at the Singapore Chess Federation.</p>
+                
             </div>
             <div class="extra">
                 <div>
-                    <a href="" class="link">Read More</a>
+                    <a href="https://singaporechess.org.sg/event/national-rapid-and-blitz-chess-championships/" class="link" target="_blank">Read More</a>
                 </div>
             </div>
         </div>
         <div class="card">
-            <img  class="cardimg" src="favicon.png" alt="Image not supported">
+            <img  class="cardimg" src="event4.png" alt="Image not supported">
             <div class="content">
-                <p>INFORMATION GOES HERE</p>
+                <p style="font-size: larger;">World Chess Day is happening next week! Drop by the Federation as we are having an open house from 3-10pm.</p>
             </div>
             <div class="extra">
                 <div>
-                    <a href="" class="link">Read More</a>
+                    <a href="https://singaporechess.org.sg/event/international-chess-day/" class="link" target="_blank">Read More</a>
                 </div>
             </div>
         </div>
+        <div class="card">
+          <img  class="cardimg" src="event5.png" alt="Image not supported">
+          <div class="content">
+              <p style="font-size: larger;">2023 Asian Junior Chess Championships this year is supported by Tata Steel and will take place in Jamshedpur, India from 7-17 September.</p>
+          </div>
+          <div class="extra">
+              <div>
+                  <a href="https://singaporechess.org.sg/event/asian-junior-chess-championships-2023/" class="link" target="_blank">Read More</a>
+              </div>
+          </div>
+      </div>
+      <div class="card">
+        <img  class="cardimg" src="event6.png" alt="Image not supported">
+        <div class="content">
+            <p style="font-size: larger;">The U20 World Junior Rapid and Blitz Championships is open for registration. The competition is held in Pula, Sardinia from 9-16 October.</p>
+        </div>
+        <div class="extra">
+            <div>
+                <a href="https://singaporechess.org.sg/event/world-junior-rapid-and-blitz-chess-championships/" class="link" target="_blank">Read More</a>
+            </div>
+        </div>
+    </div>
     </div>
     <script src="script.js"></script>
 </body>
