--- a/index.html
+++ b/index.html
@@ -81,19 +81,19 @@
     <div class="feature">
       <i class="fas fa-chalkboard-user feature__icon"></i>
       <h2 class="feature__title">Workshops</h2>
-      <p class="feature__description">TExt</p>
+      <p class="feature__description">Expand your skills and learn new things about chess from the very best players of NPSi! Organized by the Chess Society's Academics and Logistics teams, our workshops are engineered to introduce the sport of chess, foster drive in players and hone skills from the ground up. Sign up now!</p>
     </div>
   
     <div class="feature">
       <i class="fas fa-chess feature__icon"></i>
       <h2 class="feature__title">Tournaments</h2>
-      <p class="feature__description">Boosts your skills with friendly competition in the student community at NPSI.</p>
+      <p class="feature__description">Enter the ultimate arena of intellect and strategy with the Chess Society's tournaments! With us, you'll be able to play with and against some of the most skilled players you'll meet, and you'll have not only a great time, but a transformative experience that will improve your skills and fill you with a newfound drive to come back and play again.</p>
     </div>
   
     <div class="feature">
       <i class="fas fa-book feature__icon"></i>
       <h2 class="feature__title">Resources</h2>
-      <p class="feature__description">Understand, implement and try out new concepts of chess from reputed authors recommended by our team.</p>
+      <p class="feature__description">The Chess Society's hub of information, articles and guides, specially curated to expand our readers' repertoires as well as inculcate the analytical and strategic capabilities of a chess grandmaster.</p>
     </div>
   </section>
 
