--- a/learn-more.html
+++ b/learn-more.html
@@ -6,8 +6,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="{'favicon.png' %}">
     <link rel="stylesheet" href="learn-more.css">
-    <link rel="stylesheet" href="bootstrap.css">
-    <link rel="stylesheet" href="bootstrap-theme.css">
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@100&family=Roboto+Mono:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="icon" type="image/png" href="favicon.png">
@@ -66,20 +64,37 @@
     <div class="resources">
       <div class="resource">
         <div class="resource-content">
-          <h3 class="resource-title">Resource 1</h3>
-          <p class="resource-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam voluptatem aliquam eos perferendis sequi earum aperiam, at commodi ex quis soluta illum exercitationem mollitia veniam amet quibusdam optio labore nihil!</p>
-          <a href="mugnus.png" class="download-button">Download</a>
+          <h3 class="resource-title">Rules of over-the-board chess</h3>
+          <p class="resource-description">Learn the basic rules of over-the-board chess from the official FIDE website. Note that over-the-board chess might have a few rules that you may not be familiar with so we suggest that you read up on them before attending our intra-school competitions</p>
+          <a href="resource1.pdf" class="download-button" target="_blank">Download</a>
         </div>
-        <img src="favicon.png" alt="Resource 1" class="resource-image">
+        <img src="resource1_photo.png" alt="Resource 1" class="resource-image">
       </div>
 
       <div class="resource">
         <div class="resource-content">
-          <h3 class="resource-title">Resource 2</h3>
-          <p class="resource-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam voluptatem aliquam eos perferendis sequi earum aperiam, at commodi ex quis soluta illum exercitationem mollitia veniam amet quibusdam optio labore nihil!</p>
-          <a href="mugnus.png" class="download-button">Download</a>
+          <h3 class="resource-title">Learn and Master Progressive Chess</h3>
+          <p class="resource-description">This pdf helps you to develop your chess skills and also teaches important tactics that can be used in tournaments and simple online games. Read through the document to start thinking more like a professional chess grandmaster</p>
+          <a href="resource2.pdf" class="download-button" target="_blank">Download</a>
         </div>
-        <img src="favicon.png" alt="Resource 1" class="resource-image">
+        <img src="resource2_photo.png" alt="Resource 2" class="resource-image">
+      </div>
+
+      <div class="resource">
+        <div class="resource-content">
+          <h3 class="resource-title">Top 23 Checkmate Patterns</h3>
+          <p class="resource-description">This is a youtube video made by NM Nelson Lopez, posted on his youtube channel known as "Chess Vibes". This video touches upon all the common checkmating patterns that a player of all levels may come across. We think that videos like these will help develop your game regardless of elo.</p>
+          <a href="https://www.youtube.com/watch?v=Bo93mIhnDz4" class="download-button" target="_blank">Watch Video</a>
+        </div>
+        <img src="resource3_photo.png" alt="Resource 2" class="resource-image">
+      </div>
+      <div class="resource">
+        <div class="resource-content">
+          <h3 class="resource-title">56 Tactics That All Chess Players Should Know</h3>
+          <p class="resource-description">This lengthy article contains quite a lot of information on chess tactics that might seem daunting to beginners. We suggest that you should take a look at the article and read up on some basic tactics like forks, pins, batteries, et cetera. This article acts like a quick refresher for all the experienced players and also helps beginner study tactics that they might not have heard about.</p>
+          <a href="https://chessfox.com/chess-tactics-list/" class="download-button" target="_blank">View Site</a>
+        </div>
+        <img src="resource4_photo.png" alt="Resource 2" class="resource-image">
       </div>
     
     <script src="script.js"></script>
