--- a/contact.html
+++ b/contact.html
@@ -68,18 +68,18 @@
     <div class="flip-card">
         <div class="flip-card-inner">
             <div class="flip-card-front">
-                <p class="title" style="font-family: 'IBM Plex Mono', 'Roboto Mono', monospace;">Krishna Nigam</p>
+                <p class="title">Krishna Nigam</p>
             </div>
             <div class="flip-card-back">
-              <h2 class="title" style="font-family: 'IBM Plex Mono', 'Roboto Mono', monospace;">Contributions</h2>
+              <h2 class="title">Contributions</h2>
               <div class="contribs">
-                <p style="font-family: 'IBM Plex Mono', 'Roboto Mono', monospace;">•Idea formation</p>
-                <p style="font-family: 'IBM Plex Mono', 'Roboto Mono', monospace;">•Laid out the plan and managed the development</p>
+                <p style="font-family: 'IBM Plex Mono', sans-serif;"><b>• President and founder of the club</b></p>
+                <p style="font-family: 'IBM Plex Mono', sans-serif;"><b>• Oversees all the sectors including Academics, Logistics, Communication and Outreach, and Technology</b></p>
               </div>
             </div>
         </div>
     </div>
-    <div class="flip-card" style="font-family: 'IBM Plex Mono', 'Roboto Mono', monospace;">
+    <div class="flip-card">
         <div class="flip-card-inner">
             <div class="flip-card-front">
                 <p class="title">Daksh Ajmera</p>
@@ -87,13 +87,13 @@
             <div class="flip-card-back">
                 <h2 class="title">Contributions</h2>
                 <div class="contribs">
-                  <p>•Idea formation and help in app design</p>
-                  <p>•Made the website</p>
+                  <p style="font-family: 'IBM Plex Mono', sans-serif;"><b>• Responsible for creating and maintaining this website</b></p>
+                  <p style="font-family: 'IBM Plex Mono', sans-serif;"><b>• Updates this website with new events and resources</b></p>
                 </div>
             </div>
         </div>
     </div>
-    <div class="flip-card" style="font-family: 'IBM Plex Mono', 'Roboto Mono', monospace;">
+    <div class="flip-card">
         <div class="flip-card-inner">
             <div class="flip-card-front">
                 <p class="title">Adwaith Nair</p>
@@ -101,12 +101,40 @@
             <div class="flip-card-back">
                 <h2 class="title">Contributions</h2>
                 <div class="contribs">
-                  <p>•Idea formation</p>
-                  <p>•Built the application and design for it</p>
+                  <p style="font-family: 'IBM Plex Mono', sans-serif;"><b>• Responsible for creating and maintaining this website</b></p>
+                  <p style="font-family: 'IBM Plex Mono', sans-serif;"><b>• Updates this website with new events and resources</b></p>
                 </div>
             </div>
         </div>
     </div>
+    <div class="flip-card-slast">
+      <div class="flip-card-inner">
+          <div class="flip-card-front">
+              <p class="title">Medhansh Bhatia</p>
+          </div>
+          <div class="flip-card-back">
+              <h2 class="title">Contributions</h2>
+              <div class="contribs">
+                <p style="font-family: 'IBM Plex Mono', sans-serif;"><b>• Co-president, manages planning and running the tournaments</b></p>
+                <p style="font-family: 'IBM Plex Mono', sans-serif;"><b>• Also the Head of Logistics, and handles the club's treasury</b></p>
+              </div>
+          </div>
+      </div>
+  </div>
+  <div class="flip-card-last">
+    <div class="flip-card-inner">
+        <div class="flip-card-front">
+            <p class="title">Ritvik Tadwalkar</p>
+        </div>
+        <div class="flip-card-back">
+            <h2 class="title">Contributions</h2>
+            <div class="contribs">
+              <p style="font-family: 'IBM Plex Mono', sans-serif;"><b>• Head of Communication and Outreach</b></p>
+              <p style="font-family: 'IBM Plex Mono', sans-serif;"><b>• Manages the club's social media and is also in charge of publishing articles.</b></p>
+            </div>
+        </div>
+    </div>
+</div>
    
     
 </div>
