linking hostinger to repo

--- a/contact.html
+++ b/contact.html
@@ -26,8 +26,8 @@
               <span>@npschesssociety</span>
             </section>
             <section class="email">
-              <a href="mailto:npsichesssociety@gmail.com" class="fa-regular fa-envelope fa-xl"></a>
-              <span>npsichesssociety@gmail.com</span>
+              <a href="mailto:admin@npsichess.com" class="fa-regular fa-envelope fa-xl" target="_blank" ></a>
+              <span>admin@npsichess.com</span>
             </section>
           </div>
         </div>
@@ -64,15 +64,15 @@
           </div>
         </div>
       </header>
-<div class="all_cards">
-    <div class="flip-card">
-        <div class="flip-card-inner">
-            <div class="flip-card-front">
+<div class="all_cards" onclick="">
+    <div class="flip-card" onclick="">
+        <div class="flip-card-inner" onclick="">
+            <div class="flip-card-front" onclick="">
                 <p class="title">Krishna Nigam</p>
             </div>
-            <div class="flip-card-back">
+            <div class="flip-card-back" onclick="">
               <h2 class="title">Contributions</h2>
-              <div class="contribs">
+              <div class="contribs" onclick="">
                 <p style="font-family: 'IBM Plex Mono', sans-serif;"><b>• President and founder of the club</b></p>
                 <p style="font-family: 'IBM Plex Mono', sans-serif;"><b>• Oversees all the sectors including Academics, Logistics, Communication and Outreach, and Technology</b></p>
               </div>
