--- a/events.html
+++ b/events.html
@@ -21,10 +21,10 @@
           <a href="https://www.instagram.com/npschesssociety/" class="fa-brands fa-square-instagram fa-xl"></a>
           <span>@npschesssociety</span>
         </section>
-        <section class="email">
-          <a href="mailto:npsichesssociety@gmail.com" class="fa-regular fa-envelope fa-xl"></a>
-          <span>npsichesssociety@gmail.com</span>
-        </section>
+            <section class="email">
+              <a href="mailto:admin@npsichess.com" class="fa-regular fa-envelope fa-xl" target="_blank" ></a>
+              <span>admin@npsichess.com</span>
+            </section>
       </div>
     </div>
 
