--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
               <span>@npschesssociety</span>
             </section>
             <section class="email">
-              <a href="mailto:npsichesssociety@gmail.com" class="fa-regular fa-envelope fa-xl" target="_blank" ></a>
-              <span>npsichesssociety@gmail.com</span>
+              <a href="mailto:admin@npsichess.com" class="fa-regular fa-envelope fa-xl" target="_blank" ></a>
+              <span>admin@npsichess.com</span>
             </section>
           </div>
         </div>
