--- a/learn-more.html
+++ b/learn-more.html
@@ -23,8 +23,8 @@
               <span>@npschesssociety</span>
             </section>
             <section class="email">
-              <a href="mailto:npsichesssociety@gmail.com" class="fa-regular fa-envelope fa-xl"></a>
-              <span>npsichesssociety@gmail.com</span>
+              <a href="mailto:admin@npsichess.com" class="fa-regular fa-envelope fa-xl" target="_blank" ></a>
+              <span>admin@npsichess.com</span>
             </section>
           </div>
         </div>
