--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
   <section class="Inspiration">
 
     <div class="Inspiration-content">
-      <p class="Inspiration__quote">"Chess is everything: art, science and sport."</p>
+      <p class="Inspiration__quote"><i>"Chess is everything: art, science and sport."</i></p>
       <p class="Inspiration__txt">- Anatoly Karpov</p>
 
     </div>
@@ -112,7 +112,7 @@
   </section>
   <footer class="footer">
     <div class="footer__content">
-      <p>&copy; 2023 NPSI Chess Society. All rights reserved.</p>
+      <p style="font-family: 'IBM Plex Mono', sans-serif;">&copy; 2023 NPSI Chess Society. All rights reserved.</p>
     </div>
   </footer>
   <script src="script.js"></script>
