--- a/contact.html
+++ b/contact.html
@@ -41,16 +41,16 @@
             <nav class="nav">
               <ul class="nav__list">
                 <li class="nav__item">
-                  <a class="nav__link" href="index.html">Home</a>
+                  <a class="nav__link" href="/">Home</a>
                 </li>
                 <li class="nav__item">
-                  <a class="nav__link" href="contact.html">About Us</a>
+                  <a class="nav__link" href="contact">About Us</a>
                 </li>
                 <li class="nav__item">
-                  <a class="nav__link" href="events.html">Events</a>
+                  <a class="nav__link" href="events">Events</a>
                 </li>
                 <li class="nav__item">
-                  <a class="nav__link" href="learn-more.html">Resources</a>
+                  <a class="nav__link" href="learn-more">Resources</a>
                 </li>
 
               </ul>
