--- a/index.html
+++ b/index.html
@@ -40,16 +40,16 @@
             <nav class="nav">
               <ul class="nav__list">
                 <li class="nav__item">
-                  <a class="nav__link" href="index.html">Home</a>
+                  <a class="nav__link" href="/">Home</a>
                 </li>
                 <li class="nav__item">
-                  <a class="nav__link" href="contact.html">About Us</a>
+                  <a class="nav__link" href="contact">About Us</a>
                 </li>
                 <li class="nav__item">
-                  <a class="nav__link" href="events.html">Events</a>
+                  <a class="nav__link" href="events">Events</a>
                 </li>
                 <li class="nav__item">
-                  <a class="nav__link" href="learn-more.html">Resources</a>
+                  <a class="nav__link" href="learn-more">Resources</a>
                 </li>
 
               </ul>
@@ -69,8 +69,8 @@
     <div class="hero__content">
       <h1 class="hero__title">NPSi Chess Society</h1>
       <p class="hero__description"style="padding-bottom: 5%">Train, Practice and Grow!</p>
-      <a href="events.html" class="btn">Events</a>
-      <a href="learn-more.html" class="btn1">Resources</a>
+      <a href="events" class="btn">Events</a>
+      <a href="learn-more" class="btn1">Resources</a>
     </div>
 
   </section>
