--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@100&family=Roboto+Mono:wght@300&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <link rel="stylesheet" href="homepage.css">
-  <link rel="icon" type="image/png" href="favicon.png">
+  <link rel="stylesheet" href="/stylesheets/homepage.css">
+  <link rel="icon" type="image/png" href="/logos/favicon.png">
 
     <script defer src="script.js"></script>
 
@@ -35,7 +35,7 @@
     
         <div class="bottom-bar">
           <div class="bottom-bar__content">
-             <img src ="logo.png" style="height: 110px; width: 230px;"><</a>
+             <img src ="/logos/logo.png" style="height: 110px; width: 230px;"><</a>
         
             <nav class="nav">
               <ul class="nav__list">
