events folder rename

--- a/events.html
+++ b/events.html
@@ -60,7 +60,7 @@
   </header>
     <div class="all_cards">
         <div class="card">
-            <img  class="cardimg" src="/events/event1.png" alt="Image not supported">
+            <img  class="cardimg" src="/events-photos/event1.png" alt="Image not supported">
             <div class="content">
                 <p>Registration is now open for the long-awaited National Schools Team (NST) competition. We will be conducting an intra-school tournament to select students to represent NPSI. Click on the button to learn more about the official tournament.<h1></h1></p>
             </div>
@@ -71,7 +71,7 @@
             </div>
         </div>
         <div class="card">
-            <img  class="cardimg" src="/events/event3.png" alt="Image not supported">
+            <img  class="cardimg" src="/events-photos/event3.png" alt="Image not supported">
             <div class="content">
               <p style="font-size: larger;">Calling all young chess enthusiasts! Join us in celebrating the 1st Year Anniversary of the Kids Chess Club with an exciting and competitive tournament!</p>
               <p><br></p>
@@ -83,7 +83,7 @@
             </div>
         </div>
         <div class="card">
-            <img  class="cardimg" src="/events/event2.png" alt="Image not supported">
+            <img  class="cardimg" src="/events-photos/event2.png" alt="Image not supported">
             <div class="content">
                 <p style="font-size: 1.156em;">The National Rapid and Blitz Chess Championships is now open for registration! This year’s events will be held on homeground at the Singapore Chess Federation.</p>
                 
@@ -95,7 +95,7 @@
             </div>
         </div>
         <div class="card">
-            <img  class="cardimg" src="/events/event4.png" alt="Image not supported">
+            <img  class="cardimg" src="/events-photos/event4.png" alt="Image not supported">
             <div class="content">
                 <p style="font-size: larger;">World Chess Day is happening next week! Drop by the Federation as we are having an open house from 3-10pm.</p>
             </div>
@@ -106,7 +106,7 @@
             </div>
         </div>
         <div class="card">
-          <img  class="cardimg" src="/events/event5.png" alt="Image not supported">
+          <img  class="cardimg" src="/events-photos/event5.png" alt="Image not supported">
           <div class="content">
               <p style="font-size: larger;">2023 Asian Junior Chess Championships this year is supported by Tata Steel and will take place in Jamshedpur, India from 7-17 September.</p>
           </div>
@@ -117,7 +117,7 @@
           </div>
       </div>
       <div class="card">
-        <img  class="cardimg" src="/events/event6.png" alt="Image not supported">
+        <img  class="cardimg" src="/events-photos/event6.png" alt="Image not supported">
         <div class="content">
             <p style="font-size: larger;">The U20 World Junior Rapid and Blitz Championships is open for registration. The competition is held in Pula, Sardinia from 9-16 October.</p>
         </div>
