--- a/events.html
+++ b/events.html
@@ -40,8 +40,12 @@
             <li class="nav__item">
               <a class="nav__link" href="contact">About Us</a>
             </li>
-            <li class="nav__item">
-              <a class="nav__link" href="events">Events</a>
+            <li class="nav__item dropdown">
+              <span class="nav__link">Events</span>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-link" href="events">Other Events</a></li>
+                <li><a class="dropdown-link" href="nst-event">NST</a></li>
+              </ul>
             </li>
             <li class="nav__item">
               <a class="nav__link" href="learn-more">Resources</a>
