--- a/index.html
+++ b/index.html
@@ -45,9 +45,14 @@
                 <li class="nav__item">
                   <a class="nav__link" href="contact">About Us</a>
                 </li>
-                <li class="nav__item">
-                  <a class="nav__link" href="events">Events</a>
+                <li class="nav__item dropdown">
+                  <span class="nav__link">Events</span>
+                  <ul class="dropdown-menu">
+                    <li><a class="dropdown-link" href="events" style="font-family: 'IBM Plex Mono', sans-serif;">Other Events</a></li>
+                    <li><a class="dropdown-link" href="nst-event" style="font-family: 'IBM Plex Mono', sans-serif;">NST Event</a></li>
+                  </ul>
                 </li>
+                
                 <li class="nav__item">
                   <a class="nav__link" href="learn-more">Resources</a>
                 </li>
@@ -113,6 +118,6 @@
       <p style="font-family: 'IBM Plex Mono', sans-serif;">&copy; 2023 NPSI Chess Society. All rights reserved.</p>
     </div>
   </footer>
-  <script src="script.js"></script>
+  
 </body>
 </html>
