--- a/contact.html
+++ b/contact.html
@@ -128,7 +128,7 @@
   <div class="flip-card-last">
     <div class="flip-card-inner">
         <div class="flip-card-front">
-            <p class="title">Ritvik Tadwalkar</p>
+            <p class="title">Asmeeta Kumar Rajesh</p>
         </div>
         <div class="flip-card-back">
             <h2 class="title">Contributions</h2>
